# service/api/costanti.go
@@ -18,3 +18,4 @@ const LikeNotFound = "User didn't like the photo"
 const commentNotFound = "Comment doesn't exist"
 const InvalidFormat = "Invalid file format"
 const commentNotValid = "Comment isn't valid"
+const NotAllowed = "Operation not allowed"
