# service/api/like-post.go
@@ -54,7 +54,7 @@ func (rt *_router) likePhoto(w http.ResponseWriter, r *http.Request, ps httprout
 
 		case -5:
 			ctx.Logger.Error("You already liked the post")
-			w.WriteHeader(http.StatusUnauthorized)
+			http.Error(w, NotAllowed, http.StatusServiceUnavailable)
 
 		case -6:
 			ctx.Logger.Error(ErrorServerExecution)
